fix:調整mailbox判斷寄件數，可收多人信

--- a/app/views/letters/partial/_show_mailbox.html.erb
+++ b/app/views/letters/partial/_show_mailbox.html.erb
@@ -40,7 +40,7 @@
               </svg>            
             </a>
             <ul class="dropdown-content w-32  absolute hidden text-gray-700 pt-1">
-              <% @labels.each do |label| %> 
+              <% labels.each do |label| %> 
                 <li class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"><%= label.hierarchy %></li>
               <% end %>
               <li><%= link_to '建立標籤', new_label_path, class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" %></li>
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="pl-3 text-sm font-medium text-gray-500">
-          <%= @letter.created_at.strftime("%Y/%m/%d %I:%M %p") %>
+          <%= letter.created_at.strftime("%Y/%m/%d %I:%M %p") %>
         </div>
       </div>
       <div class="hidden sm:flex divide-x divide-gray-100 space-x-2 pl-0 sm:px-2">
@@ -86,7 +86,7 @@
     <%# content %>
     <div class="p-5">
       <h1 class="text-2xl font-bold text-gray-900 mb-4">
-        <%= @letter.subject %>
+        <%= letter.subject %>
       </h1>
       <div class="flex items-center mb-4">
         <div class="flex-shrink-0">
@@ -95,28 +95,38 @@
         <div class="ml-4">
           <div class="flex">
             <div class="text-base font-semibold text-gray-900 truncate">
-              <%= @letter.user.username %> 
+              <%= letter.user.username %> 
             </div>
             <div class="text-xs text-gray-600 truncate m-auto">
-              <span><</span><%= @letter.sender %><span>></span>
+              <span><</span><%= letter.sender %><span>></span>
             </div>
           </div>
           <div class="text-xs text-normal text-gray-500">
-            <span>寄給 </span><%= @letter.recipient %>
+            <span>寄給 </span><%= letter.recipient %>
           </div>
         </div>
       </div>
       <div class="space-y-2">
         <p class="text-base font-normal text-gray-500">
-          <%= @letter.rich_text_body %>
+          <%= letter.rich_text_body %>
+          <% letter.attachments.each do |attachment| %>
+            <% if attachment.content_type.include?('image') %>
+              <%= image_tag attachment %>
+            <% end %>
+          <% end %>
         </p>
+        <div class="lg-fixed pt-96">
+          <% letter.attachments.each do |attachment| %>
+            <%= link_to attachment.filename, attachment %>
+          <% end %>
+        </div>
       </div>
     </div>
     <div class="bg-white lg:fixed p-4 lg:pl-64 w-full bottom-0 right-0 border-t border-gray-200">
       <div class="sm:flex items-center sm:divide-x sm:divide-gray-100 lg:pl-4">
         <div class="sm:flex space-y-3 sm:space-y-0 mb-3 sm:mb-0">
         <%# 回信 %>
-          <%= link_to reply_letter_path(@letter) do %>
+          <%= link_to reply_letter_path(letter) do %>
             <div class="text-gray-900 bg-white border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center justify-center w-full sm:w-auto mr-3">
               <svg class="-ml-1 mr-2 h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h10a8 8 0 018 8v2M3 10l6 6m-6-6l6-6"></path>
@@ -125,7 +135,7 @@
             </div>
           <% end %>
           <%# 轉寄 %>
-          <%= link_to forwarded_letter_path(@letter), action: :new do %>
+          <%= link_to forwarded_letter_path(letter), action: :new do %>
           <div class="text-gray-900 bg-white border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center justify-center w-full sm:w-auto mr-3">
             <svg class="-ml-1 mr-2 h-5 w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path>
