--- a/app/views/labels/index.html.erb
+++ b/app/views/labels/index.html.erb
@@ -29,6 +29,9 @@
             <% end %>
           </tbody>
         </table>
+        <div class="flex">
+          <%= link_to "回收件匣", letters_path, class:"w-32 bg-gray-200 mt-4 py-2 rounded-2xl text-white font-semibold mb-2 text-center mx-10 ml-auto" %>
+        </div>
       </div>
     </div>
   </div>
