--- a/app/views/letters/partial/_navbar.html.erb
+++ b/app/views/letters/partial/_navbar.html.erb
@@ -65,7 +65,7 @@
             <%# 收件夾 %>
             <li>
               <%= link_to letters_path do %>
-                <div class ="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group">
+                <div class ="folderBtn text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group" data-route='/letters'>
                   <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path d="M8.707 7.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l2-2a1 1 0 00-1.414-1.414L11 7.586V3a1 1 0 10-2 0v4.586l-.293-.293z"></path>
                     <path d="M3 5a2 2 0 012-2h1a1 1 0 010 2H5v7h2l1 2h4l1-2h2V5h-1a1 1 0 110-2h1a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2V5z"></path>
@@ -78,7 +78,7 @@
             <%# 已加星號 %>
             <li>
               <%= link_to starred_letters_path do %>
-                <div class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ">
+                <div class="folderBtn text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group" data-route='/letters/starred'>
                   <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
                   </svg>                
@@ -89,7 +89,7 @@
             <%# 寄件備份 %>
             <li>
               <%= link_to sendmail_letters_path do %>
-                <div class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ">
+                <div class="folderBtn text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group" data-route='/letters/sendmail'>              
                   <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" viewBox="0 0 20 20" fill="currentColor">
                     <path d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z" />
                   </svg>
@@ -100,7 +100,7 @@
             <%# 標籤 %>
             <li>
               <% labels.each do |label| %>
-               <a href="/labels/<%= label.id %>" class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ml-<%= label.indentation %>" data-id='<%= label.id %>'>
+               <a href="/labels/<%= label.id %>" class="folderBtn text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ml-<%= label.indentation %>" data-id='<%= label.id %>' data-route='/labels/<%= label.id %>'>
                  <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" viewBox="0 0 20 20" fill="currentColor">
                    <path fill-rule="evenodd" d="M17.707 9.293a1 1 0 010 1.414l-7 7a1 1 0 01-1.414 0l-7-7A.997.997 0 012 10V5a3 3 0 013-3h5c.256 0 .512.098.707.293l7 7zM5 6a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
                  </svg>
