fix:Demo 2 前畫面微調

--- a/app/views/labels/index.html.erb
+++ b/app/views/labels/index.html.erb
@@ -3,7 +3,7 @@
     <h2 class="text-gray-600 font-semibold">標籤列表</h2>
     <div class="flex  ">
       <div class="lg:ml-40 ml-10 space-x-8">
-        <%= link_to "新增標籤", new_label_path, type:"submit", class:"bg-indigo-600 px-4 py-2 rounded-md text-white font-semibold tracking-wide cursor-pointer" %>
+        <%= link_to "新增標籤", new_label_path, type:"submit", class:"bg-blue-600 px-4 py-2 rounded-md text-white font-semibold tracking-wide cursor-pointer" %>
       </div>
     </div>
   </div>
@@ -30,7 +30,7 @@
           </tbody>
         </table>
         <div class="flex">
-          <%= link_to "回收件匣", letters_path, class:"w-32 bg-gray-200 mt-4 py-2 rounded-2xl text-white font-semibold mb-2 text-center mx-10 ml-auto" %>
+          <%= link_to "回收件匣", letters_path, class:"w-32 bg-gray-200 mt-4 py-2 rounded-2xl font-semibold mb-2 text-center mx-10 ml-auto" %>
         </div>
       </div>
     </div>
