--- a/app/views/letters/partial/_navbar.html.erb
+++ b/app/views/letters/partial/_navbar.html.erb
@@ -16,7 +16,7 @@
               <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
             </svg>
           </div>
-          <%= form_tag letters_path(current_user), method: :get, class:"flex" do %>
+          <%= form_tag search_letters_path, method: "get", class:"flex" do %>
             <%= text_field_tag :search, params[:search], placeholder: "Search...",class:"rounded-xl border border-gray-300 text-gray-900 sm:text-sm focus:ring-cyan-600 focus:border-cyan-600 w-full pl-10 p-2.5" %>
           <% end %>
         </div>
