fix:將回覆及轉寄視窗改成彈跳視窗

--- a/app/views/letters/partial/_show_mailbox.html.erb
+++ b/app/views/letters/partial/_show_mailbox.html.erb
@@ -136,7 +136,7 @@
       <div class="sm:flex items-center sm:divide-x sm:divide-gray-100 lg:pl-4">
         <div class="sm:flex space-y-3 sm:space-y-0 mb-3 sm:mb-0">
         <%# 回信 %>
-          <%= link_to reply_letter_path(letter) do %>
+          <%= link_to reply_letter_path(letter), remote: true do %>
             <div class="text-gray-900 bg-white border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center justify-center w-full sm:w-auto mr-3">
               <svg class="-ml-1 mr-2 h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h10a8 8 0 018 8v2M3 10l6 6m-6-6l6-6"></path>
@@ -145,7 +145,7 @@
             </div>
           <% end %>
           <%# 轉寄 %>
-          <%= link_to forwarded_letter_path(letter), action: :new do %>
+          <%= link_to forwarded_letter_path(letter), remote: true do %>
           <div class="text-gray-900 bg-white border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center justify-center w-full sm:w-auto mr-3">
             <svg class="-ml-1 mr-2 h-5 w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path>
