feat:新增判斷信件已讀未讀功能

--- a/app/views/letters/partial/_email_content.html.erb
+++ b/app/views/letters/partial/_email_content.html.erb
@@ -58,7 +58,7 @@
           <div class="align-middle inline-block min-w-full">
             <div class="shadow overflow-hidden">
               <% letters.each do |letter| %>
-                <div class="w-full letter_container flex hover:bg-gray-100 border">
+                <div class="w-full letter_container flex hover:bg-gray-200 border <%= letter.read ? 'bg-gray-100' : ''%>">
                   <%# checkbox %>
                   <div data-id='<%= letter.id %>' id="letterItem"
                        class="flex w-10 mr-2 items-center justify-center">
