--- a/app/views/letters/partial/_show_mailbox.html.erb
+++ b/app/views/letters/partial/_show_mailbox.html.erb
@@ -6,7 +6,7 @@
         <div class="pr-3">
           <%# 回上一頁 %>
           <%= button_to letters_path, method: 'get' do %>
-            <a class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
+            <a class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center" id="back">
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd"></path>
               </svg>
