--- a/app/views/letters/partial/_email_content.html.erb
+++ b/app/views/letters/partial/_email_content.html.erb
@@ -47,14 +47,8 @@
         </div>
 
         <%# 頁碼 %>
-        <div class="hidden sm:flex items-center space-y-3 sm:space-y-0 space-x-0 sm:space-x-3">
-          <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
-            <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-          </a>
-          <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
-            <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
-          </a>
-          <span class="sm:text-xs md:text-sm font-normal text-gray-500">Show <span class="text-gray-900 font-semibold">1-25</span> of <span class="text-gray-900 font-semibold">100</span></span>
+        <div class="sm:flex items-center space-y-3 sm:space-y-0 space-x-0 sm:space-x-3">
+          <%= paginate @letters %>                 
         </div>
       </div>
 
