fix:寄件備份收件者和收主畫面調整

--- a/app/views/letters/partial/_show_mailbox.html.erb
+++ b/app/views/letters/partial/_show_mailbox.html.erb
@@ -1,5 +1,5 @@
 <%# readmail_layout %>
-<div id="main-content" class="h-screen w-5/6 ml-auto bg-gray-50 relative overflow-y-auto">
+<div id="main-content" class="h-screen lg:ml-64 ml-auto bg-gray-50 relative overflow-y-auto">
   <div class="pt-6 px-4">
     <div class="p-4 bg-white block sm:flex items-center justify-between border-b border-gray-200 lg:mt-1.5">
       <div class="flex items-center divide-x divide-gray-100">
@@ -121,6 +121,7 @@
       <div class="space-y-2">
         <p class="text-base font-normal text-gray-500">
           <%= letter.rich_text_body %>
+          <%= letter.rich_text_content %>
           <% letter.attachments.each do |attachment| %>
             <% if attachment.content_type.include?('image') %>
               <%= image_tag attachment %>
