--- a/app/views/letters/partial/_email_content.html.erb
+++ b/app/views/letters/partial/_email_content.html.erb
@@ -1,6 +1,6 @@
 <%# email-content %>
-  <div id="main-content" class="h-screen w-5/6 ml-auto bg-gray-50 relative overflow-y-auto">
-    <div class="pt-6 px-4">
+  <div id="main-content" class="h-screen lg:ml-64 ml-auto bg-gray-50 relative overflow-y-auto">
+    <div class="lg:mt-1.5">
       <div class="p-4 bg-white block sm:flex items-center justify-between border-b border-gray-200 lg:mt-1.5">
         <%# 所有小圖示列 %>
         <div class="flex items-center divide-x divide-gray-100">
@@ -89,16 +89,16 @@
                   <div class="w-full">
                     <%= link_to letter_path(letter.id) do %>
                       <div class="w-full flex justify-items-center">
-                        <div class="w-1/6 p-4 items-center whitespace-nowrap space-x-4 text-base font-semibold text-gray-900">
-                          <%= letter.user.username %>
+                        <div class="w-1/5 p-4 items-center whitespace-nowrap  text-base font-semibold text-gray-900 truncate overflow-hidden">
+                          <%= letter.sender %>
                         </div>
-                        <div class="w-4/6 flex p-4 text-base text-gray-900 truncate overflow-ellipsis">
+                        <div class="w-4/6 flex p-4 text-base text-gray-900 overflow-hidden truncate max-w-sm md:max-w-lg">
                           <% letter.labels.each do |label|%>
                             <div class="bg-yellow-500 border rounded-md mx-1 px-1">
                               <%= label.title %>
                             </div>
                           <% end %>
-                          <div class="font-bold mr-2">
+                          <div class="font-bold mr-6">
                             <%= letter.subject %> -
                           </div>
                           <div class="h-6 font-light max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden overflow-ellipsis whitespace-nowrap">
@@ -106,7 +106,7 @@
                             <%= letter.body %>
                           </div>
                         </div>
-                        <div class="ml-auto p-4 pr-10 text-base font-normal text-gray-900 max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden">
+                        <div class="ml-auto p-4 pr-10 text-base font-normal text-gray-900 whitespace-nowrap">
                           <%= letter.created_at.strftime("%Y/%m/%d") %>
                         </div>
                       </div>
