--- a/app/views/letters/partial/_new_letter.html.erb
+++ b/app/views/letters/partial/_new_letter.html.erb
@@ -25,7 +25,7 @@
     <div class="md:flex items-center mt-8">
       <div class="w-full flex flex-col">
         <%= form.label :內容, for:"content", class:"font-semibold leading-none mb-4" %>
-        <%= form.rich_text_area :content ,type:"text", class:"h-36 leading-none text-gray-900 p-3 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200" %>
+        <%= form.rich_text_area :content ,type:"text", class:"leading-none text-gray-900 p-3 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200" %>
       </div>
     </div>
     <div class="flex items-center justify-center w-full">
