--- a/app/views/letters/sendmail.html.erb
+++ b/app/views/letters/sendmail.html.erb
@@ -1,2 +1,130 @@
 <%= render "letters/partial/navbar", labels: @label_folder %>
-<%= render "letters/partial/email_content", letters: @letters %>
+<%# email-content %>
+  <div id="main-content" class="h-screen lg:ml-64 ml-auto bg-gray-50 relative overflow-y-auto">
+    <div class="lg:mt-1.5">
+      <div class="relative p-4 bg-white block sm:flex items-center justify-between border-b border-gray-200 lg:mt-1.5">
+        <%# 所有小圖示列 %>
+        <div class="flex items-center divide-x divide-gray-100">
+          <%# 全選 %>
+          <div class="pr-3">
+            <input id="checkbox-all" aria-describedby="checkbox-1" type="checkbox" class="bg-gray-50 border-gray-300 focus:ring-3 focus:ring-cyan-200 h-4 w-4 rounded">
+            <label for="checkbox-all" class="sr-only">checkbox</label>
+          </div>
+          <div class="flex space-x-2 px-0 sm:px-2">
+            <%# 垃圾桶 %>
+            <%= link_to trash_api_letters_path, method: 'trash', data: { confirm: 'Are you sure?' } do %>
+              <div id="trashBtn" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
+                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd"></path></svg>
+              </div>
+            <% end %>
+            <%# label選單 %>
+            <div class="dropdown inline-block relative items-center mr-10" id='labelBtn'>
+              <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M17.707 9.293a1 1 0 010 1.414l-7 7a1 1 0 01-1.414 0l-7-7A.997.997 0 012 10V5a3 3 0 013-3h5c.256 0 .512.098.707.293l7 7zM5 6a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+                </svg>            
+              </a>
+              <ul class="dropdown-content min-w-max absolute hidden text-gray-700 pt-1">
+                <% @labels.each do |label| %> 
+                  <li data-id='<%= label.id%>' id='labelItem'
+                      class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"><%= label.hierarchy %></li>
+                <% end %>
+                  <li><%= link_to '建立標籤', new_label_path, class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap font-bold" %></li>
+                  <li><%= link_to '標籤列表', labels_path, class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap font-bold" %></li>
+              </ul>
+            </div>
+            <%# 回報為垃圾信件 %>
+            <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
+              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd">
+                </path>
+              </svg>
+            </a>
+            <%# 更多選項 %>
+            <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
+              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z"></path></svg>
+            </a>
+          </div>
+        </div>
+
+        <%# 頁碼 %>
+        <div class="hidden sm:flex items-center space-y-3 sm:space-y-0 space-x-0 sm:space-x-3">
+          <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
+            <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
+          </a>
+          <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
+            <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
+          </a>
+          <span class="sm:text-xs md:text-sm font-normal text-gray-500">Show <span class="text-gray-900 font-semibold">1-25</span> of <span class="text-gray-900 font-semibold">100</span></span>
+        </div>
+      </div>
+
+      <%# 每一封信 %>
+      <div class="flex flex-col">
+        <div class="overflow-x-auto">
+          <div class="align-middle inline-block min-w-full">
+            <div class="shadow overflow-hidden">
+              <% @letters.each do |letter| %>
+                <div class="w-full letter_container flex hover:bg-gray-100 border">
+                  <%# checkbox %>
+                  <div data-id='<%= letter.id %>' id="letterItem"
+                       class="flex w-10 mr-2 items-center justify-center">
+                    <input id="checkbox" aria-describedby="checkbox-1" type="checkbox" 
+                            class=" bg-gray-50 border-gray-300 focus:ring-3 focus:ring-cyan-200 h-4 w-4 rounded" onClick="event.stopPropagation();">
+                    <label for="checkbox" class="sr-only">checkbox</label>
+                  </div>
+                  <%# 星星 %>
+                  <div class="mr-2 flex items-center justify-center"
+                        data-controller="starmail"
+                        data-starmail-starred-value="<%= user_signed_in? && current_user %>"
+                        data-starmail-letter-id-value="<%= letter.id %>">
+                    <div data-action="click->starmail#star" data-starmail-target="btn" >
+                      <% if letter.star %>
+                        <svg class="text-yellow-300 w-6 h-6 "  fill="currentColor" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z">
+                          </path>
+                        </svg>
+                      <% else %>
+                        <svg class="text-gray-400 w-6 h-6 hover:text-yellow-300" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z">
+                          </path>
+                        </svg>
+                      <% end %>
+                    </div>
+                  </div>
+                  <%# 信件摘要 %>
+                  <div class="w-full">
+                    <%= link_to letter_path(letter.id) do %>
+                      <div class="w-full flex justify-items-center">
+                        <div class="w-1/5 p-4 items-center space-x-4 text-base font-semibold text-gray-900 truncate">
+                          <%= letter.recipient %>
+                        </div>
+                        <div class="flex p-4 text-base text-gray-900 overflow-hidden truncate max-w-sm md:max-w-lg">
+                          <% letter.labels.each do |label|%>
+                            <div class="bg-yellow-500 border rounded-md mx-1 px-1">
+                              <%= label.title %>
+                            </div>
+                          <% end %>
+                          <div class="font-bold mr-6">
+                            <%= letter.subject %>
+                          </div>
+                          <div class="max-h-6 font-light max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate">
+                            <%= letter.content %>
+                            <%= letter.body %>
+                          </div>
+                        </div>
+                        <div class="ml-auto p-4 pr-10 text-base font-normal text-gray-900 whitespace-nowrap">
+                          <%= letter.created_at.strftime("%Y/%m/%d") %>
+                        </div>
+                      </div>
+                    <% end %>
+                  </div>
+                </div>
+              <% end %> 
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
