fix:letter show頁面點選label new and index也都是modal

--- a/app/views/letters/partial/_email_content.html.erb
+++ b/app/views/letters/partial/_email_content.html.erb
@@ -48,7 +48,7 @@
 
         <%# 頁碼 %>
         <div class="sm:flex items-center space-y-3 sm:space-y-0 space-x-0 sm:space-x-3">
-          <%= paginate @letters %>                 
+          <%# paginate @letters %>                 
         </div>
       </div>
 
