modify:將按鈕樣式加上padding，修改付款回傳後頁面

--- a/app/views/orders/payment.html.erb
+++ b/app/views/orders/payment.html.erb
@@ -32,7 +32,7 @@
           <%= form.text_area :悄悄話, placeholder: "我想和Yimail說...", class:"bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" %>
         </div>
         
-          <%= form.submit :按我抖內支持Yimail, class:"my-3 text-center w-max-content bg-blue-500 hover:bg-blue-700 text-white font-bold border-b-4 border-blue-600 hover:border-blue rounded-lg bg-red-500" %>
+          <%= form.submit :按我抖內支持Yimail, class:"py-2 px-4 my-3 text-center w-max-content bg-blue-500 hover:bg-blue-700 text-white font-bold border-b-4 border-blue-600 hover:border-blue rounded-lg bg-red-500" %>
       <% end %>
     <% end %>
   </div>
