--- a/app/views/letters/show_sentmail.html.erb
+++ b/app/views/letters/show_sentmail.html.erb
@@ -44,8 +44,8 @@
                 <li data-id='<%= label.id%>' id='labelItemInShow' 
                     class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"><%= label.hierarchy %></li>
               <% end %>
-                <li><%= link_to '建立標籤', new_label_path, remote: true, class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap font-bold" %></li>
-                <li><%= link_to '標籤列表', labels_path, class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap font-bold" %></li>
+                <li><%= link_to "#{t("create_label")}", new_label_path, remote: true, class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap font-bold" %></li>
+                <li><%= link_to "#{t("label_list")}", labels_path, class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap font-bold" %></li>
             </ul>
           </div>
         </div>
