--- a/app/views/letters/partial/_navbar.html.erb
+++ b/app/views/letters/partial/_navbar.html.erb
@@ -113,7 +113,7 @@
             <%# 垃圾桶 %>
             <li>
               <%= link_to trash_letters_path do %>
-                <div href="#" class="folderBtn text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group" data-route='/letters/trash'>
+                <div class="folderBtn text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group" data-route='/letters/trash'>
                   <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" viewBox="0 0 20 20" fill="currentColor">
                     <path fillRule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clipRule="evenodd"></path>
                   </svg>
