--- a/app/views/letters/partial/_navbar.html.erb
+++ b/app/views/letters/partial/_navbar.html.erb
@@ -4,10 +4,10 @@
     <div class="px-3 py-3 lg:px-5 lg:pl-3">
       <div class="flex items-center">
       	<div class="lg:hidden">
-          <button id="sidebarBtn" class="text-base text-gray-900 font-normal rounded-lg flex items-center p-2 group hover:bg-gray-100 transition duration-75 w-full">
-            <svg class="block h-4 w-4 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path></svg>
+          <button id="sidebarBtn" class="text-base text-gray-500 font-normal rounded-lg flex items-center p-2 group hover:bg-gray-100 transition duration-75 w-full">
+            <svg class="block h-5 w-5 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path></svg>
           </button>
-		    </div>
+        </div>
         <%# logo %>
         <div class="w-1/6 flex items-center justify-start ml-3">
           <%= link_to letters_path do %>
@@ -17,7 +17,7 @@
           <% end %>
         </div>
         <%# 搜尋列 %>
-        <div class="w-3/6 mt-1 relative">
+        <div class="w-3/6 mt-1 relative hidden lg:block">
           <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
             <svg class="w-5 h-5 text-gray-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
@@ -147,6 +147,8 @@
     </div>
   </aside>
 </div>
+<%# 點選漢堡背景色 %>
+<div id="sidebarBackdrop" class="bg-gray-500 opacity-50 hidden fixed inset-0 z-10 lg:hidden"></div>
 
 <%# new letter modal  %>
 <div id="newletterModal" class="hidden overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center items-center backdrop-sepia bg-opacity-60 bg-gray-500">
@@ -171,5 +173,3 @@
     </div>
   </div>
 </div>
-
-<div id="sidebarBackdrop" class="bg-gray-500 opacity-50 hidden fixed inset-0 z-10" ></div>
