--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="absolute inset-0 z-0 flex items-end w-full h-full bg-cover opacity-50">
-        <img src="http://devdojo.com.s3.us-east-1.amazonaws.com/tails/images/mesh-bg-blue.svg" class="object-cover w-full h-full">
+      <svg xmlns="http://www.w3.org/2000/svg" width="1440" height="720" fill="none" xmlns:v="https://vecta.io/nano"><g clip-path="url(#C)"><g filter="url(#A)"><path d="M1195.96 568.411c-480.959 167.971-849.495 71.373-960.981 0-32.784-13.074-111.746-73.28-253-93.584-176.567-25.38 8.07 220.972 164.5 283.5s708.368 95.987 979.151 40.352c344.85-70.852 671.54-440.231 70.33-230.268z" fill="url(#B)"/></g></g><defs><filter id="A" x="-290" y="273" width="2020.27" height="753.932" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0"/><feBlend in="SourceGraphic"/><feGaussianBlur stdDeviation="100"/></filter><linearGradient id="B" x1="567.5" y1="1.04" x2="1029.02" y2="64.647" gradientUnits="userSpaceOnUse"><stop stop-color="#001aff"/><stop offset="1" stop-color="#6ee5c2"/></linearGradient><clipPath id="C"><path fill="#fff" d="M0 0h1440v720H0z"/></clipPath></defs></svg>
     </div>
   </div>
 </section>
