--- a/app/views/letters/sendmail.html.erb
+++ b/app/views/letters/sendmail.html.erb
@@ -106,7 +106,7 @@
                             </div>
                           <% end %>
                           <div class="font-bold mr-6">
-                            <%= letter.subject %>
+                            <%= letter.subject %> -
                           </div>
                           <div class="max-h-6 font-light max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate">
                             <%= letter.content %>
