--- a/app/views/letters/partial/_email_content.html.erb
+++ b/app/views/letters/partial/_email_content.html.erb
@@ -90,7 +90,7 @@
                     <%= link_to letter_path(letter.id) do %>
                       <div class="w-full flex justify-items-center">
                         <div class="w-1/5 p-4 items-center whitespace-nowrap  text-base font-semibold text-gray-900 truncate overflow-hidden">
-                          <%= letter.sender %>
+                          <%= letter.recipient_name %>
                         </div>
                         <div class="w-4/6 flex p-4 text-base text-gray-900 overflow-hidden truncate max-w-sm md:max-w-lg">
                           <% letter.labels.each do |label|%>
