--- a/app/views/letters/sendmail.html.erb
+++ b/app/views/letters/sendmail.html.erb
@@ -1,4 +1,5 @@
 <%= render "letters/partial/navbar", labels: @label_folder %>
+<%= render "letters/partial/label_new"%>
 <%# email-content %>
   <div id="main-content" class="h-screen lg:ml-64 ml-auto bg-gray-50 relative overflow-y-auto">
     <div class="lg:mt-1.5">
