--- a/app/views/letters/show_sentmail.html.erb
+++ b/app/views/letters/show_sentmail.html.erb
@@ -1,3 +1,4 @@
+<%= render "letters/partial/label_new"%>
 <%# readmail_layout %>
 <div id="main-content" class="h-screen w-5/6 ml-auto bg-gray-50 relative overflow-y-auto">
   <div class="pt-6 px-4">
@@ -154,29 +155,6 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
             </svg>
           </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<%# new label modal  %>
-<div id="labelNewContainer" class="hidden overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center items-center backdrop-sepia bg-opacity-60 bg-gray-500">
-  <div class="w-4/12 mx-auto mt-10">
-    <div class="bg-white shadow-md border border-gray-200 rounded-lg p-4">
-      <!--header-->
-      <div class="flex items-start justify-between p-5 border-b border-solid border-blueGray-200 rounded-t">
-        <h3 class="text-2xl font-semibold">
-          新增標籤
-        </h3>
-        <button id ="closeBtn" class="p-1 ml-auto bg-transparent hover:bg-gray-200 hover:text-gray-900" >
-          <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>  
-        </button>
-      </div>
-      <!--body-->
-      <div class="relative p-6 flex-auto">
-        <div id="labelNew">
         </div>
       </div>
     </div>
