--- a/app/views/letters/sendmail.html.erb
+++ b/app/views/letters/sendmail.html.erb
@@ -66,7 +66,7 @@
           <div class="align-middle inline-block min-w-full">
             <div class="shadow overflow-hidden">
               <% @letters.each do |letter| %>
-                <div class="w-full letter_container flex hover:bg-gray-100 border">
+                <div class="w-full letter_container flex hover:bg-gray-200 border <%= letter.read ? 'bg-gray-100 ' : 'bg-white font-bold'%>">
                   <%# checkbox %>
                   <div data-id='<%= letter.id %>' id="letterItem"
                        class="flex w-10 mr-2 items-center justify-center">
@@ -106,7 +106,7 @@
                               <%= label.title %>
                             </div>
                           <% end %>
-                          <div class="font-bold mr-6">
+                          <div class="mr-6">
                             <%= letter.subject %> -
                           </div>
                           <div class="max-h-6 font-light max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate">
