fix:拿掉登入後的devise訊息

--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -7,7 +7,7 @@
        %>
     </h2>
     <ul>
-      <% resource.errors.full_messages.each do |message| %>
+      <% resource.errors.full_messages.each do |message| unless value.blank? %>
         <li><%= message %></li>
       <% end %>
     </ul>
