fix:devise註冊畫面無法顯示

--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -7,7 +7,7 @@
        %>
     </h2>
     <ul>
-      <% resource.errors.full_messages.each do |message| unless value.blank? %>
+      <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
