--- a/app/views/labels/index.html.erb
+++ b/app/views/labels/index.html.erb
@@ -4,7 +4,7 @@
     <h2 class="text-gray-600 font-semibold">標籤列表</h2>
     <div class="flex">
       <div class="lg:ml-40 ml-10 space-x-8">
-        <%= link_to "新增標籤", new_label_path, remote: true, type:"submit", class:"bg-indigo-600 px-4 py-2 rounded-md text-white font-semibold tracking-wide cursor-pointer" %>
+        <%= link_to "新增標籤", new_label_path, remote: true, type:"submit", class:"bg-blue-500 px-4 py-2 rounded-md text-white font-semibold tracking-wide cursor-pointer" %>
       </div>
     </div>  
   </div>
@@ -30,7 +30,7 @@
           <% end %>
             <tr class="border-b">
               <td class="text-center py-5">
-                <%= link_to "回收件匣", letters_path, class:"w-28 text-white text-sm transition duration-150 hover:bg-gray-200 bg-gray-300 font-semibold py-2 px-4 rounded" %>
+                <%= link_to "回收件匣", letters_path, class:"w-28 text-black text-sm transition duration-150 hover:bg-gray-200 bg-gray-300 font-semibold py-2 px-4 rounded" %>
               </td>
             </tr>
         </tbody>
