--- a/app/views/letters/partial/_email_content.html.erb
+++ b/app/views/letters/partial/_email_content.html.erb
@@ -78,7 +78,7 @@
                   <div class="w-full">
                     <%= link_to letter_path(letter.id) do %>
                       <div class="w-full flex justify-items-center">
-                        <div class="p-4 items-center whitespace-nowrap  text-base font-semibold text-gray-900 truncate overflow-hidden">
+                        <div class="w-1/5 p-4 items-center whitespace-nowrap  text-base font-semibold text-gray-900 truncate overflow-hidden">
                           <% if letter.recipient_name.present? %>
                             <%= letter.recipient_name %>
                           <% else %>
