--- a/app/views/labels/_new.html.erb
+++ b/app/views/labels/_new.html.erb
@@ -10,7 +10,7 @@
         <%= form.select :group, options_from_collection_for_select(@labels_with_order, :title, :display), {include_blank: true}, {class: "w-full px-4 py-2 mt-2 mr-4 text-base text-black transition duration-500 ease-in-out transform rounded-lg bg-gray-100 focus:border-blueGray-500 focus:bg-white focus:outline-none focus:shadow-outline focus:ring-2 ring-offset-current ring-offset-2"} %> 
       </div>
       <div class="relative pt-4">
-        <%= form.submit "建立", class:"block w-full bg-indigo-600 mt-4 py-2 rounded-2xl text-white font-semibold mb-2 text-center" %>
+        <%= form.submit "建立", class:"block w-full bg-blue-500 mt-4 py-2 rounded-2xl text-white font-semibold mb-2 text-center" %>
       </div>
     <% end %>
   </div>
