--- a/app/views/labels/edit.html.erb
+++ b/app/views/labels/edit.html.erb
@@ -6,8 +6,8 @@
         <%= form.text_field :title ,type:"text", class:"w-full px-4 py-2 mt-2 mr-4 text-base text-black transition duration-500 ease-in-out transform rounded-lg bg-gray-100 focus:border-blueGray-500 focus:bg-white focus:outline-none focus:shadow-outline focus:ring-2 ring-offset-current ring-offset-2" %>
       </div>
       <div class="relative pt-4">
-        <%= link_to "取消", labels_path, class:"block w-full bg-gray-200 mt-4 py-2 rounded-2xl text-white font-semibold mb-2 text-center" %>
-        <%= form.submit "儲存編輯", class:"block w-full bg-indigo-600 mt-4 py-2 rounded-2xl text-white font-semibold mb-2 text-center" %>
+        <%= link_to "取消", labels_path, class:"block w-full bg-gray-200 mt-4 py-2 rounded-2xl text-black font-semibold mb-2 text-center" %>
+        <%= form.submit "儲存編輯", class:"block w-full bg-blue-500 mt-4 py-2 rounded-2xl text-white font-semibold mb-2 text-center" %>
       </div>
     <% end %>
   </div>
